--- a/1 Physics/1 Mechanics/Problem_1/index.html
+++ b/1 Physics/1 Mechanics/Problem_1/index.html
@@ -325,7 +325,7 @@ plt.grid(True)
 plt.show()
 </code></pre>
 <h3 id="simulation-output-from-python-code">Simulation Output from Python code</h3>
-<p>Here is the static image generated from google colab:</p>
+<p>Here is the static image generated from google colab by using python code:</p>
 <h2 id="_1"><img alt="alt text" src="../image-6.png"/></h2>
 <h3 id="explanation-of-the-code">Explanation of the Code</h3>
 <ul>
