--- a/1 Physics/2 Gravity/Problem_1/index.html
+++ b/1 Physics/2 Gravity/Problem_1/index.html
@@ -172,6 +172,141 @@
 <div class="document" itemscope="itemscope" itemtype="http://schema.org/Article" role="main">
 <div class="section" itemprop="articleBody">
 <h1 id="problem-1">Problem 1</h1>
+<ol>
+<li>Derivation of Kepler's Third Law
+Kepler's Third Law states: [ T^2 \propto r^3 ] Where:</li>
+</ol>
+<p>(T) is the orbital period,
+(r) is the orbital radius.
+Derivation: For a body in circular orbit around a central mass (M), the gravitational force provides the necessary centripetal force:</p>
+<p>[ \frac{GMm}{r^2} = \frac{mv^2}{r} ]</p>
+<p>Where:</p>
+<p>(G) the gravitational constant ((6.674 \times 10^{-11} \ \text{m}^3/\text{kg} \cdot {s}^2)),
+(m) is the mass of the orbiting body,
+(v) is the orbital speed.
+The orbital speed can be expressed in terms of the orbital period (T):</p>
+<p>[ v = \frac{2\pi r}{T} ]</p>
+<p>Substituting this into the centripetal force equation gives:</p>
+<p>[ \frac{GMm}{r^2} = \frac{m(2\pi r)^2}{r} ]</p>
+<p>Simplifying leads to:</p>
+<p>[ \fracGM}{r^2} = \frac{4\pi^2 m}{T^2} ]</p>
+<p>Rearranging gives:</p>
+<p>[ T^2 = \frac{4\pi^2 r^3}{GM} ]</p>
+<p>This shows that the square of the orbital period is proportional to the cube of the orbital radius.</p>
+<ol>
+<li>Implications for Astronomy
+Calculating Planetary Masses: By observing the orbital period and radius of a satellite or planet, we can calculate the mass of the central body using the rearranged formula: [ M = \frac{4\pi^2 r^3}{G T^2} ]</li>
+</ol>
+<p>Understanding Orbital Dynamics: Kepler's Third Law helps us understand the dynamics of planetary systems, including the relationships between different planets and their distances from the Sun.</p>
+<ol>
+<li>Real-World Examples
+Moon's Orbit Around Earth: The average distance from the Earth to the Moon is about (3.84 \times 10^8) meters, and the orbital period is approximately 27.3 days. Using Kepler's Third Law, can verify the relationship.</li>
+</ol>
+<p>Planets in the Solar System: The relationship holds for all planets, with the outer planets having longer periods and larger radii.</p>
+<ol>
+<li>Computational Model
+We will implement a Python script to simulate circular orbits and verify Kepler's Third Law. The script will calculate the orbital period for radii and plot the results.</li>
+</ol>
+<p>Python Code
+import numpy as np
+import matplotlib.pyplot as plt</p>
+<h1 id="constants">Constants</h1>
+<p>G = 6.674 * 10<strong>-11  # Gravitational constant (m^3 kg^-1 s^-2)
+M_sun = 1.989 * 10</strong>30  # Mass of the Sun (kg)</p>
+<p>def calculate_orbital_period(radius):
+    """
+    Calculate the orbital period for a given radius using Kepler's Third Law.</p>
+<pre><code>Parameters:
+-----------
+radius : float
+    The orbital radius (in meters).
+
+Returns:
+--------
+float
+    The orbital period (in seconds).
+"""
+T_squared = (4 * np.pi**2 * radius**3) / (G * M_sun) # Added = for assignment
+T = np.sqrt(T_squared)  # Period in seconds # Added = for assignment
+return T
+</code></pre>
+<h1 id="define-a-range-of-orbital-radii-in-meters">Define a range of orbital radii (in meters)</h1>
+<p>radii = np.linspace(1e11, 1.5e12, 100)  # From 100 million km to 1.5 billion km</p>
+<h1 id="calculate-the-corresponding-orbital-periods">Calculate the corresponding orbital periods</h1>
+<p>periods = np.array([calculate_orbital_period(r) for r in radii])</p>
+<h1 id="periods-from-seconds-to-days-for-better-interpretation">periods from seconds to days for better interpretation</h1>
+<p>periods_days = periods / (24 * 3600)  # Convert seconds to days</p>
+<h1 id="plotting-the-results">Plotting the results</h1>
+<p>plt.figure(figsize=(12, 8)) # Added comma in figsize</p>
+<h1 id="1-orbital-period-vs-orbital-radius">1. Orbital Period vs. Orbital Radius</h1>
+<p>plt.subplot(2, 2, 1)
+plt.plot(radii / 1e9, periods_days, label='Orbital Period', color='blue')  # Convert radius to billion meters
+plt.xlabel('Orbital Radius (billion meters)')
+plt.ylabel('Orbital Period (days)')
+plt.title('Orbital Period vs. Orbital Radius')
+plt.grid()
+plt.legend()
+plt.tight_layout()</p>
+<h1 id="2-t2-vs-r3-to-verify-keplers-third-law">2. T^2 vs. r^3 to verify Kepler's Third Law</h1>
+<p>T_squared = periods<strong>2
+r_cubed = radii</strong>3 # Corrected variable name to radii</p>
+<p>plt.subplot(2, 2, 2)
+plt.plot(r_cubed / 1e36, T_squared / 1e12, label='T^2 vs. r^3', color='orange')  # Convert to trillion m^3 and trillion s^2 # Added plt.
+plt.xlabel('Orbital Radius Cubed (trillion m^3)') # Corrected spelling for Cubed
+plt.ylabel('Orbital Period Squared (trillion s^2)')
+plt.title('Verification of Kepler\'s Third Law')
+plt.grid()
+plt.legend()
+plt.tight_layout()</p>
+<h1 id="3-gravitational-force-vs-centripetal-force">3. Gravitational Force vs. Centripetal Force</h1>
+<p>gravitational_forces = G * M_sun / radii<strong>2
+centripetal_forces = (M_sun * (2 * np.pi * radii / periods)</strong>2) / radii</p>
+<p>plt.subplot(2, 2, 3)
+plt.plot(radii / 1e9, gravitational_forces, label='Gravitational Force', color='green') # Continued the line
+plt.plot(radii / 1e9, centripetal_forces, label='Centripetal Force', color='red') # Continued the line
+plt.xlabel('Orbital Radius (billion meters)')
+plt.ylabel('Force (N)')
+plt.title('Gravitational Force vs. Centripetal Force')
+plt.legend()
+plt.grid()
+plt.tight_layout()</p>
+<h1 id="4-orbital-speed-vs-orbital-radius">4. Orbital Speed vs. Orbital Radius</h1>
+<p>orbital_speeds = (2 * np.pi * radii) / periods</p>
+<p>plt.subplot(2, 2, 4)
+plt.plot(radii / 1e9, orbital_speeds, label='Orbital Speed', color='purple')
+plt.xlabel('Orbital Radius (billion meters)')
+plt.ylabel('Orbital Speed (m/s)')
+plt.title('Orbital Speed vs. Orbital Radius')
+plt.grid()
+plt.legend()
+plt.tight_layout()</p>
+<p>plt.show()</p>
+<h1 id="additional-analysis-calculate-the-mass-of-the-sun-using-keplers-third-law">Additional Analysis: Calculate the mass of the Sun using Kepler's Third Law</h1>
+<p>def calculate_mass(radius, period):
+    """
+    Calculate the mass of the central body using Kepler's Third Law.</p>
+<pre><code>Parameters:
+-----------
+radius : float
+    The orbital radius (in meters).
+period : float
+    The orbital period (in seconds).
+
+Returns:
+--------
+float
+    The mass of the central body (in kg).
+"""
+T_squared = period**2
+mass = (4 * np.pi**2 * radius**3) / (G * T_squared)
+return mass
+</code></pre>
+<h1 id="calculate-the-mass-of-the-sun-using-the-average-radius-of-earths-orbit">Calculate the mass of the Sun using the average radius of Earth's orbit</h1>
+<p>earth_radius = 1.496 * 10**11  # Average distance from Earth to Sun (in meters)
+earth_period = 365.25 * 24 * 3600  # Orbital period of Earth (in seconds)</p>
+<p>mass_sun = calculate_mass(earth_radius, earth_period)
+print(f"Calculated mass of the Sun: {mass_sun:.2e} kg")
+<img alt="alt text" src="../image.png"/></p>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
