deploy: 512293e0eaf7b30db2366e38174fdf9158a9f934

--- a/1 Physics/2 Gravity/Problem_2/index.html
+++ b/1 Physics/2 Gravity/Problem_2/index.html
@@ -197,8 +197,7 @@ M_sun = 1.989 * 10</strong>30  # Mass of the Sun (kg)</p>
 <p>celestial_bodies = {
     'Earth': (5.972 * 10<strong>24, 6.371 * 10</strong>6, 1.496 * 10<strong>11),
     'Mars': (0.64171 * 10</strong>24, 3.3895 * 10<strong>6, 2.279 * 10</strong>11),
-    'Jupiter': (1.898 * 10<strong>27, 6.9911 * 10</strong>7, 7.785 * 10**11)
-}</p>
+    'Jupiter': (1.898 * 10<strong>27, 6.9911 * 10</strong>7, 7.785 * 10**11)</p>
 <h1 id="function-to-calculate-escape-velocity">Function to calculate escape velocity</h1>
 <p>def escape_velocity(M, r):
     return np.sqrt(2 * G * M / r)</p>
