--- a/1 Physics/2 Gravity/Problem_2/index.html
+++ b/1 Physics/2 Gravity/Problem_2/index.html
@@ -180,7 +180,7 @@ Third Cosmic Velocity (Solar Escape Velocity): The speed required to escape the 
 Definitions and Mathematical Derivations
 1. First Cosmic Velocity (Orbital Velocity)
 The first cosmic velocity is the speed needed to achieve a stable orbit around a celestial body. For a circular orbit, it can be derived from the balance between gravitational force and centripetal force:</p>
-<p>$ v_o = \sqrt{\frac{GM}{r}} $</p>
+<div class="arithmatex">\[ v_o = \sqrt{\frac{GM}{r}} \]</div>
 <p>Where:</p>
 <p>( v_o ) = orbital velocity
 ( G ) = gravitational constant ((6.67430 \times 10^{-11} , \text{m}^3 \text{kg}^{-1} \text}^{-2}))
@@ -242,7 +242,7 @@ orbital_velocities <span class="arithmatex">\(results\)</span>body()'orbital_vel
 escape_velocities = <span class="arithmatex">\(results\)</span>body<span class="arithmatex">\(<span class="arithmatex">\('escape_velocity'\)</span> for body in labels\)</span>
 solar_escape_velocities_values = <span class="arithmatex">\(solar_escape_velocities\)</span>body$ for body in labels$</p>
 <p>x = np.arange(len(labels))
-<img alt="alt text" src="../image-4.png"/>
+!$$alt text](image-4.png)
 plt.figure(figsize=(12, 6))
 plt.bar(x - 0.2, orbital_velocities, width=0.2, label='Orbital Velocity (m/s)', color='blue')
 plt.bar(x, escape_velocities, width=0.2, label='Escape Velocity (m/s)', color='orange')
@@ -270,7 +270,7 @@ plt.grid()
 plt.legend()
 plt.show()
 Celestial Bodies Data: We create a dictionary containing the mass and radius of Earth, Mars, and Jupiter.
-<img alt="alt text" src="../image-5.png"/>
+!$$alt text](image-5.png)
 Function calculate_velocities: This function calculates the orbital and escape velocities for a given mass and radius.</p>
 <p>Results Storage: We store the calculated velocities for each celestial body.</p>
 <p>Solar Escape Velocity Calculation: We calculate the solar escape velocity for each planet based on its distance from the Sun.</p>
