--- a/1 Physics/2 Gravity/Problem_2/index.html
+++ b/1 Physics/2 Gravity/Problem_2/index.html
@@ -188,12 +188,12 @@ The first cosmic velocity is the speed needed to achieve a stable orbit around a
 ( r ) = distance from the center of the celestial body to the orbiting object
 2. Second Cosmic Velocity (Escape Velocity)
 The second cosmic velocity is the speed required to escape the gravitational influence of a celestial body. It can be derived from the conservation of energy principle:</p>
-<p>$ v_e = \sqrt{\frac{2GM}{r}} $</p>
+<div class="arithmatex">\[ v_e = \sqrt{\frac{2GM}{r}}\]</div>
 <p>Where:</p>
 <p>( v_e ) = escape velocity
 3. Third Cosmic Velocity (Solar Escape Velocity)
 The third cosmic velocity is the speed required to escape the gravitational influence of the Sun. It can be calculated using the same formula as escape velocity, but considering the distance from the Sun:</p>
-<p>$ v_{se} = \sqrt{\frac{2GM_{sun}}{d}} $</p>
+<div class="arithmatex">\[ v_{se} = \sqrt{\frac{2GM_{sun}}{d}} \]</div>
 <p>Where:</p>
 <p>( v_{se} ) = solar escape velocity
 ( M_{sun} ) = mass of the Sun
