deploy: 9d21737574125980850de97bceb6a67a276ab155

--- a/1 Physics/2 Gravity/Problem_3/index.html
+++ b/1 Physics/2 Gravity/Problem_3/index.html
@@ -559,6 +559,21 @@ plt.show()
 <li><strong>Magenta Curve (Hyperbolic Trajectory):</strong><br/>
   The payload follows an escape trajectory, with slight differences due to the higher altitude.</li>
 </ul>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<p>bb0d5238dd312fd683986e00edae5eaf2b81fab3</p>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
